--- a/css/styles.css
+++ b/css/styles.css
@@ -49,3 +49,10 @@ body {
 	height: 1em;
 	flex-basis: 1.4em;
 }
+
+.funky-text {
+    color: #DBBB52;
+    text-align: center;
+    font-style: normal;
+    text-decoration:none;
+}
