--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ body {
 .funky-text {
     font-family:'Source Code Pro', monospace;
     color: #F0BC68;
-    text-align: left;
+    text-align: center;
     font-style: normal;
 }
 
